WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257616
REGRESSION(
257658@main
): Unable to exit fullscreen from video controls on bleacherreport.com
https://bugs.webkit.org/show_bug.cgi?id=257616
Summary
REGRESSION(257658@main): Unable to exit fullscreen from video controls on ble...
Tim Nguyen (:ntim)
Reported
2023-06-01 12:54:45 PDT
rdar://109373298
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2023-06-01 12:59:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14599
EWS
Comment 2
2023-06-01 16:00:53 PDT
Committed
264814@main
(fced3c933266): <
https://commits.webkit.org/264814@main
> Reviewed commits have been landed. Closing PR #14599 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug