Cherry-pick fced3c933266. rdar://problem/109373298

REGRESSION(257658@main): Unable to exit fullscreen from video controls on bleacherreport.com
    https://bugs.webkit.org/show_bug.cgi?id=257616
    rdar://109373298

    Reviewed by Jer Noble.

    The website was using an event listener for both prefixed & unprefixed APIs on the document object, causing the
    library's event listener to fire twice and wrongly track the fullscreen state.

    To fix this, extend the check from 260651@main to cover document event listners as well.

    * LayoutTests/fullscreen/event-listener-prefixed-unprefixed-document-expected.html: Added.
    * LayoutTests/fullscreen/event-listener-prefixed-unprefixed-document.html: Added.
    * Source/WebCore/dom/FullscreenManager.cpp:
    (WebCore::FullscreenManager::dispatchEventForNode):

    Canonical link: https://commits.webkit.org/264814@main

Identifier: 259548.809@safari-7615-branch